enable Tempo traces to Loki logs

--- a/deploy/grafana/fluentd-loki.conf
+++ b/deploy/grafana/fluentd-loki.conf
@@ -1,17 +1,29 @@
 <source>
   @type forward
+  @id    input1
+  @label @mainstream
   port 24224
 </source>
-<match **>
-  @type loki
-  url "#{ENV['LOKI_URL']}"
-  extra_labels {"job":"fluentd","env":"dev"}
-  <label>
-    container $.container_name
-  </label>
-  <label>
-    source $.source
-  </label>
-  remove_keys $.ts, $.tsNs, $.container_id
-  drop_single_key true
-</match>
+
+<label @mainstream>
+  <match **>
+    @type loki
+    url "#{ENV['LOKI_URL']}"
+    extra_labels {"job":"fluentd","env":"dev"}
+    <label>
+      container $.container_name
+    </label>
+    <label>
+      source $.source
+    </label>
+    <label>
+      service $.ServiceName
+    </label>
+    remove_keys $.ts, $.tsNs, $.container_id
+    drop_single_key true
+    <buffer>
+      flush_interval 10s
+      flush_at_shutdown true
+    </buffer>
+  </match>
+</label>
