--- a/src/BuildingBlocks/WebHostCustomization/WebHost.Customization/WebHost.Customization.csproj
+++ b/src/BuildingBlocks/WebHostCustomization/WebHost.Customization/WebHost.Customization.csproj
@@ -19,6 +19,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="5.0.0" />
     <PackageReference Include="Microsoft.NETCore.Platforms" Version="5.0.0" />
+      <PackageReference Include="OpenTelemetry" Version="1.2.0-alpha2" />
+      <PackageReference Include="OpenTelemetry.Exporter.Prometheus" Version="1.2.0-alpha2" />
     <PackageReference Include="Polly" Version="7.2.1" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
   </ItemGroup>
