--- a/src/BuildingBlocks/WebHostCustomization/WebHost.Customization/WebHost.Customization.csproj
+++ b/src/BuildingBlocks/WebHostCustomization/WebHost.Customization/WebHost.Customization.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <GenerateErrorForMissingTargetingPacks>false</GenerateErrorForMissingTargetingPacks>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
     <ItemGroup>
@@ -20,7 +21,13 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="5.0.0" />
     <PackageReference Include="Microsoft.NETCore.Platforms" Version="5.0.0" />
       <PackageReference Include="OpenTelemetry" Version="1.2.0-alpha2" />
+      <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.1.0" />
       <PackageReference Include="OpenTelemetry.Exporter.Prometheus" Version="1.2.0-alpha2" />
+      <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.0.0-rc7" />
+      <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.0.0-rc7" />
+      <PackageReference Include="OpenTelemetry.Instrumentation.GrpcNetClient" Version="1.0.0-rc7" />
+      <PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.0.0-rc7" />
+      <PackageReference Include="OpenTelemetry.Instrumentation.SqlClient" Version="1.0.0-rc7" />
     <PackageReference Include="Polly" Version="7.2.1" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
   </ItemGroup>
